internal/controller/test_data/wms/complete/expected/configmap-ogc-webservice-proxy.yaml
apiVersion: v1
data:
  service-config.yaml: |-
    grouplayers:
      group-layer-name:
      - gpkg-layer-name
      - postgis-layer-name
      top-layer-name:
      - gpkg-layer-name
      - postgis-layer-name
      - tif-layer-name

immutable: true
kind: ConfigMap
metadata:
  labels:
    pdok.nl/app: mapserver
    dataset: dataset
    dataset-owner: datasetOwner
    pdok.nl/inspire: "true"
    service-type: wms
    service-version: v1_0
    theme: '2016'
  name: complete-wms-ogc-webservice-proxy-527f8545k9
  namespace: default
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: WMS
      name: complete
      uid: ""
      blockOwnerDeletion: true
      controller: true
