internal/controller/test_data/wms/complete/expected/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  labels:
    pdok.nl/app: mapserver
    dataset: dataset
    dataset-owner: datasetOwner
    pdok.nl/inspire: "true"
    service-type: wms
    service-version: v1_0
    theme: "2016"
  name: complete-wms-mapserver
  namespace: default
  ownerReferences:
    - apiVersion: pdok.nl/v3
      kind: WMS
      name: complete
      uid: ""
      blockOwnerDeletion: true
      controller: true
  annotations:
    uptime.pdok.nl/id: 5b67e76cef85f33507d2ff00ddd73fe85d4eb449
    uptime.pdok.nl/name: some service title WMS
    uptime.pdok.nl/tags: 2016,dataset,datasetOwner,public-stats,v1_0,wms
    uptime.pdok.nl/url: http://localhost:32788/datasetOwner/dataset/2016/wms/v1_0?SERVICE=WMS&VERSION=1.3.0&REQUEST=GetMap&BBOX=11,22,33,44&CRS=EPSG:28992&WIDTH=100&HEIGHT=100&LAYERS=gpkg-layer-name&STYLES=&FORMAT=image/png
spec:
  routes:
    - kind: Rule
      match: Host(`localhost`) &&
        PathPrefix(`/datasetOwner/dataset/2016/wms/v1_0/legend`)
      middlewares:
        - name: complete-wms-mapserver-headers
      services:
        - kind: Service
          name: complete-wms-mapserver
          port: 80
    - kind: Rule
      match: Host(`localhost`) && Path(`/datasetOwner/dataset/2016/wms/v1_0`)
      middlewares:
        - name: complete-wms-mapserver-headers
      services:
        - kind: Service
          name: complete-wms-mapserver
          port: 9111
    - kind: Rule
      match: Host(`localhost`) &&
        PathPrefix(`/other/path/legend`)
      middlewares:
        - name: complete-wms-mapserver-headers
      services:
        - kind: Service
          name: complete-wms-mapserver
          port: 80
    - kind: Rule
      match: Host(`localhost`) && Path(`/other/path`)
      middlewares:
        - name: complete-wms-mapserver-headers
      services:
        - kind: Service
          name: complete-wms-mapserver
          port: 9111
